# libpolycall-2_0

./: .dockerignore  .gitignore  CMakeLists.txt  DOCKER_HUB_PUBLISHING.md  Dockerfile  Makefile  QUICKSTART.md  TODO.txt  USAGE_GUIDE.md  docker-compose.examples.yml
bindings/java-polycall/: package-lock.json  package.json
daemon/: README.md  makefile
daemon/src/: polycalld_windows.c
docs/specifications/: repo_structure.md
examples/: hello_polycall.c  hello_polycall.go  hello_polycall.js  hello_polycall.py
scripts/: publish-docker-hub.sh
src/: main.c
